# Avanzamenti_produzione

./: .gitignore  README.md  SECURITY.md  app copy.py  app.py  estrazione_inventario.py  file.py  model.py  models.py  models_generated.py  models_old.py  pyproject.toml  requirements.txt  routes.py  run.py  schema.py  sync_db.py  sync_giacenze.py  sync_input.py  sync_parametri.py  tree.txt  web.config  wsgi.py
.github/: dependabot.yml
app/: app.py  auth.py  models.py  routes.py
app_odp/: _old.py  api.py  app.py  auth.py  csv_gen.py  debug_txt_generator.py  etichette.py  extensions.py  filters.py  models.py  odp_output.py  outbox_helpers.py  policy.py  prova.py  routes.py  run.py
documenti/: .$flusso informativo.drawio.bkp  .$schema_dati_input.drawio.bkp  Flowchart produzione.pptx  RBAC.db  Struttura iniziale RBAC.xlsx  Struttura log.xlsx  Struttura output.xlsx  Thumbs.db  esempio_output_doc.txt  flusso informativo.drawio  mermaid_timeline.js  schema_sql.pptx  struttura comunicazione.pptx  tabelle RBAC.xlsx
excel/: articoli.xlsx  df_odp.xlsx  estrazione brrrewer-essens .xlsx  estrazione errori.xlsx  giacenzatotale base.xlsx  giacenzatotale.xlsx  join.xlsx  joined.xlsx  magazzini.xlsx  odp.xlsx  odpcomponenti.xlsx  odpfasi.xlsx  risorse.xlsx  vwESGiacenza.xlsx  vwESGiacenzaLotti.xlsx  ~$df_odp.xlsx
exported template/: dash_complessiva.html  home_carpenteria.html  home_collaudo.html  home_montaggio.html  home_officina.html  impostazioni.html  login.html  page_vuota.html  priorità.html  sitemap.xml
instance/: RBAC.db  RBAC.sqbpro
static/: config.toml  (+1 more)
(+119 files in other folders)
