[build-system]
requires = ["hatchling >= 1.27.0"]
build-backend = "hatchling.build
[project]
name = "___"
version = "0.1.0"
authors = [
  { name="______", email="giorgio.alessandria@bernardi.it" },
]
description = "Programma per la lettura e gestione dei biglietti da visita ricevuti da clienti e fornitori"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
[project.urls]
Homepage = "https://github.com/GiorgioAlessandria/___"
Issues = "https://github.com/GiorgioAlessandria/OCR_bigliettidavisita-Main/issues"